revert and updated mobile version

--- a/index.css
+++ b/index.css
@@ -1,29 +1,93 @@
-/*
-    note: text algin center and margin auto do not
-    work on inline elements
-
-*/
-*,*::before,*::after{
-    margin:0;
-    padding:0;
+@font-face {
+    font-family: 'AdiHaus';
+    src: URL('https://assets.codepen.io/6060109/adihaus_regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "AdiHaus";
+    src: url("https://assets.codepen.io/6060109/adihaus_bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+  }
+  
+  body, html { 
+    min-width: 100%;
+    min-height: 100vh;
+    margin: 0;
+    font-family: AdiHaus;
+  }
+  
+  .all-container {
+    max-width: 450px;
+    margin: 0 auto;
+  }
+  
+  #logo {
+    margin: 15px auto;
+    display: block;
+  }
+  
+  #athlete {
+    background: blue url("https://assets.codepen.io/6060109/athlete-girl.png") no-repeat right top;
+    background-size: cover;
+    height: 250px;
+    width: 100%;
+  }
+  
+  .all-content-container {
+    padding: 20px 30px;
+  }
+  
+  .text-content-container {
+    width: 100%;
+    text-align: center;
+  }
+  
+  h2, p {
+     margin: 0;
+  }
+  
+  h2 {
+    font-size: 48px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+  }
+  
+  p {
+    line-height: 28px;
+    margin: 20px 0 40px;
+    color: #333333;
+  }
+  
+  h2:nth-of-type(1) {
+    color: #CD3A24;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  
+  h2:nth-of-type(2) {
+    color: #423A3A
+  }
+  
+  form {
+    display: flex;
+  }
+  
+  input[type="text"] {
+    width: 75%;
+    padding: 0 20px;
+    height: 50px;
     box-sizing: border-box;
-}
-html,body{
-    min-width:100%;
-    min-height: 100%;
-}
-
-.navBar{
-    width:100%;
-text-align: center;
-}
-.navBar > img{
-    width:100%;
-    max-width:100px;
-}
-.coming-soon{
-background:blue url("Bitmap.png") no-repeat right top;
-background-size:cover;
-height:300px;
-width:100%;
-}
+  }
+  
+  input[type="submit"] {
+    width: 20%;
+    height: 50px;
+    box-sizing: border-box;
+    background-color: black;
+    font-weight: 700;
+    font-size: 16px;
+    color: white;
+    border: none;
+  }
